# auth-service

./: .env.docker  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env  main.py  pyproject.toml
migrations/models/: 1_20251202212754_update.py  2_20251202222042_update.py
src/: depends.py  enums.py  repo.py
src/admin/: admin_app.py  resources.py
src/api/: auth.py  router.py  user.py
src/core/: config.py  db.py  lifespan.py  logger.py
src/exceptions/: admin.py  auth.py  user.py
src/models/: __init__.py  admin.py  base.py  user.py
src/schemas/: token.py  user.py
src/services/: auth.py  token.py  user.py
tests/: conf_test.py  test_auth.py
